Add user/devices endpoint
