# models/device.go
@@ -1,0 +1,12 @@
+package models
+
+import (
+	"time"
+)
+
+type Device struct {
+	ID         uint
+	LastActive time.Time
+	UserAgent  string
+	IPAddress  string
+}
